Enhance the Cartesian checkout finder tests